--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/infinity": "^2.0.6",
+    "@better-scroll/pull-down": "^2.0.6",
+    "@better-scroll/pull-up": "^2.0.6",
+    "@better-scroll/scroll-bar": "^2.0.6",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "module": "^1.2.5",
+    "somewhere": "^1.0.1",
+    "vant": "^3.0.0-rc.1",
     "vue": "^3.0.0",
+    "vue-axios": "^2.0.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -21,6 +30,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "sass": "^1.26.5",
